# two-kinds-of-sovereignty

./: Dockerfile
docs/superpowers/plans/: 2026-03-24-sovereignty-economic-model.md
docs/superpowers/specs/: 2026-03-24-sovereignty-economic-model-design.md
sovereignty-model/: .gitignore  Dockerfile  Procfile  README.md  generate_figures.py  pyproject.toml
sovereignty-model/app/: dashboard.py
sovereignty-model/model/: __init__.py  analytical.py  calibration.py  evolutionary.py  policy.py  visualization.py
sovereignty-model/output/latex/: sovereignty_model.tex
sovereignty-model/tests/: test_analytical.py  test_calibration.py  test_evolutionary.py  test_policy.py
