[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereignty-model"
version = "0.1.0"
description = "Formal economic model of AI sovereignty dynamics"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
